--- a/Bootstrap_Website_UUSI/main.css
+++ b/Bootstrap_Website_UUSI/main.css
@@ -1,17 +1,19 @@
 body {
     padding: 0;
     margin: 0;
-    background: #f2f6e9;
+    background: #06227e;
 }
 .navbar {
-    background:#f3b2e5;
-    position: fixed; /* Set the navbar to fixed position */
+    background:#9ca9f3;
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
+    position: sticky;
+    top: 0;
+    z-index: 100;
 }
 .nav-link,
 .navbar-brand {
-    color: #fff;
+    color: rgb(255, 255, 255);
     cursor: pointer;
 }
 .nav-link {
@@ -45,7 +47,8 @@ body {
 	text-align: center;
 }
 .description h1 {
-	color: #e983bf;
+    padding-top: 20rem;
+	color: #000000;
     font-weight: bold;
 }
 .description p {
@@ -54,8 +57,8 @@ body {
 	line-height: 1.5;
 }
 .description button {
-    border:1px solid #ff00d4;
-    background:#ff00dd;
+    border:1px solid #06227e;
+    background:#06227e;
     border-radius: 0;
     color:#fff;
 }
@@ -91,9 +94,6 @@ body {
     color: #666;
     padding: 40px 0;
 }
-* {
-    margin: 0;
-}
-html, body {
-    height: 100%;
+.h1 {
+
 }
