--- a/Bootstrap_Website_UUSI/main.css
+++ b/Bootstrap_Website_UUSI/main.css
@@ -1,99 +1,102 @@
 body {
-    padding: 0;
-    margin: 0;
-    background: #06227e;
+  padding: 0;
+  margin: 0;
+  background: #06227e;
 }
 .navbar {
-    background:#9ca9f3;
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-    position: sticky;
-    top: 0;
-    z-index: 100;
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 .nav-link,
 .navbar-brand {
-    color: rgb(255, 255, 255);
-    cursor: pointer;
+  color: rgb(255, 255, 255);
+  cursor: pointer;
 }
 .nav-link {
-    margin-right: 1em !important;
+  margin-right: 1em !important;
 }
 .nav-link:hover {
-    color: #000;
+  color: white;
 }
 .navbar-collapse {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 .header {
-    background-image: url('images/header-background.jpg');
-    background-size: cover;
-    background-position: center;
-    position: relative;
+  background-image: url("images/header-background.jpg");
+  background-size: cover;
+  background-position: stretch;
+  position: relative;
 }
 .overlay {
-    position: absolute;
-    min-height: 100%;
-    min-width: 100%;
-    left: 0;
-    top: 0;
-    background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  min-height: 100%;
+  min-width: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.6);
 }
 .description {
-	left: 50%;
-	position: absolute;
-	top: 45%;
-	transform: translate(-50%, -55%);
-	text-align: center;
+  left: 50%;
+  position: absolute;
+  top: 45%;
+  transform: translate(-50%, -55%);
+  text-align: center;
 }
 .description h1 {
-    padding-top: 20rem;
-	color: #000000;
-    font-weight: bold;
+  padding-top: 25rem;
+  color: #006b00;
+  font-weight: bold;
+  font-size: 90px;
 }
 .description p {
-	color: #fff;
-	font-size: 1.3rem;
-	line-height: 1.5;
+  color: rgb(255, 255, 255);
+  font-size: 1.5rem;
+  line-height: 2;
 }
 .description button {
-    border:1px solid #06227e;
-    background:#06227e;
-    border-radius: 0;
-    color:#fff;
+  border: 1px solid #06227e;
+  background: #06227e;
+  border-radius: 0;
+  color: #fff;
 }
 .description button:hover {
-	border:1px solid #fff;
-    background:#fff;
-    color:#000;
+  border: 1px solid #fff;
+  background: #fff;
+  color: #000;
 }
 .features {
-	margin: 4em auto;
-	padding: 1em;
-	position: relative;
+  margin: 4em auto;
+  padding: 1em;
+  position: relative;
 }
 .feature-title {
-	color: #333;
-	font-size: 1.3rem;
-	font-weight: 700;
-	margin-bottom: 20px;
-	text-transform: uppercase;
+  color: rgb(255, 255, 255);
+  font-size: 3rem;
+  font-weight: 500;
+  margin-bottom: 40px;
+  text-transform: uppercase;
 }
 .features img {
-	-webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-	-moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
-	margin-bottom: 16px;
+  -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
+  margin-bottom: 15px;
 }
 .page-footer {
-    background-color: #222;
-    color: #ccc;
-    padding: 60px 0 30px;
+  background-color: rgb(0, 4, 39);
+  color: rgb(255, 255, 255);
 }
-.footer-copyright {
-    color: #666;
-    padding: 40px 0;
+.footerText {
+  padding: 1.5rem;
+  color: white;
+  font-size: 30px;
 }
-.h1 {
-
+.nav-item {
+  padding: 15px;
+}
+.container {
+  padding-bottom: 110px;
 }
