--- a/Bootstrap_Website_UUSI/main.css
+++ b/Bootstrap_Website_UUSI/main.css
@@ -1,7 +1,7 @@
 body {
   padding: 0;
   margin: 0;
-  background: #06227e;
+  background: #001e80;
 }
 .navbar {
   top: 0; /* Position the navbar at the top of the page */
@@ -85,12 +85,17 @@ body {
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
   margin-bottom: 15px;
 }
-.page-footer {
-  background-color: rgb(0, 4, 39);
-  color: rgb(255, 255, 255);
+.page-footer{
+  background-color: black;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
 }
 .footerText {
-  padding: 1.5rem;
+  padding: 50px;
+  padding-top: 50px;
   color: white;
   font-size: 30px;
 }
