Päivitystä Oulu-sivulle

--- a/Bootstrap_Website_UUSI/Kuopio.css
+++ b/Bootstrap_Website_UUSI/Kuopio.css
@@ -8,3 +8,18 @@
     padding-left: 30px;
 }
 
+.page-footer {
+    background-color: black;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
+}
+
+.footerText {
+padding: 50px;
+padding-top: 50px;
+color: white;
+font-size: 30px;
+}
