--- a/Bootstrap_Website_UUSI/Oulu.css
+++ b/Bootstrap_Website_UUSI/Oulu.css
@@ -1,4 +1,4 @@
-.header {
+.body {
   background-image: url("images/oulu-background.jpg");
   background-size: cover;
   background-position: center;
@@ -7,4 +7,19 @@
   height: 1124px;
 }
 
+.page-footer {
+  background-color: black;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
+}
+
+.footerText {
+  padding: 50px;
+  padding-top: 50px;
+  color: white;
+  font-size: 30px;
+}
   
