--- a/Bootstrap_Website_UUSI/main.css
+++ b/Bootstrap_Website_UUSI/main.css
@@ -1,35 +1,42 @@
 body {
-  padding: 0;
-  margin: 0;
-  background: #001e80;
+  background: #001e80; 
 }
+
 .navbar {
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
+  top: 0; /* Sijoitetaan sivun yläosaan */
+  width: 100%; /* Koko leveydelle */
   position: sticky;
   top: 0;
   z-index: 100;
 }
+
 .nav-link,
 .navbar-brand {
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255); /* Logon ja navbarin sisällön otsikkojen värit */
   cursor: pointer;
 }
+
 .nav-link {
-  margin-right: 1em !important;
+  margin-right: 10em !important;
 }
+
+/* Logon ja otsikkojen väri kun kursori niiden päällä */
 .nav-link:hover {
-  color: white;
+  color: rgb(35, 105, 10);
 }
+
 .navbar-collapse {
   justify-content: flex-end;
 }
+
 .header {
   background-image: url("images/header-background.jpg");
   background-size: cover;
   background-position: stretch;
   position: relative;
 }
+
+/* Himmennys taustalle: */
 .overlay {
   position: absolute;
   min-height: 100%;
@@ -38,40 +45,52 @@ body {
   top: 0;
   background: rgba(0, 0, 0, 0.6);
 }
+
 .description {
   left: 50%;
   position: absolute;
   top: 45%;
-  transform: translate(-50%, -55%);
+  transform: translate(-50%, -45%); /* täältä korjaus */
   text-align: center;
 }
+
+/* Tervetuloa-teksti */
 .description h1 {
   padding-top: 25rem;
   color: #006b00;
   font-weight: bold;
   font-size: 90px;
 }
+
+/* Teksti tervetuloa-tekstin alapuolella */
 .description p {
   color: rgb(255, 255, 255);
   font-size: 1.5rem;
   line-height: 2;
 }
+
+/* Kerro lisää -nappi */
 .description button {
   border: 1px solid #06227e;
   background: #06227e;
   border-radius: 0;
   color: #fff;
 }
+
+/* Muuttaa Kerro lisää -napin mustavalkoiseksi kun kursori napin päällä */
 .description button:hover {
   border: 1px solid #fff;
   background: #fff;
   color: #000;
 }
+
 .features {
   margin: 4em auto;
   padding: 1em;
   position: relative;
 }
+
+/* KUOPIO ja OULU -otsikot */
 .feature-title {
   color: rgb(255, 255, 255);
   font-size: 3rem;
@@ -79,12 +98,15 @@ body {
   margin-bottom: 40px;
   text-transform: uppercase;
 }
+
 .features img {
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
   margin-bottom: 15px;
 }
+
+/* Footerin väri ja koko */
 .page-footer{
   background-color: black;
   left: 0;
@@ -93,15 +115,21 @@ body {
   color: white;
   text-align: center;
 }
+
+/* Footerin tekstin väri ja koko */
 .footerText {
   padding: 50px;
   padding-top: 50px;
   color: white;
   font-size: 30px;
 }
+
+
+
 .nav-item {
   padding: 15px;
 }
+
 .container {
-  padding-bottom: 110px;
+  padding-bottom: 150px;
 }
