--- a/Bootstrap_Website_UUSI/Kuopio.css
+++ b/Bootstrap_Website_UUSI/Kuopio.css
@@ -1,20 +1,20 @@
 .list-group {
-    padding-top: 30px;
-    padding-left: 30px;
+padding-top: 30px;
+padding-left: 30px;
 }
 
 .sisennys {
-    padding-top: 30px;
-    padding-left: 30px;
+padding-top: 30px;
+padding-left: 30px;
 }
 
 .page-footer {
-    background-color: black;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
-    text-align: center;
+background-color: black;
+left: 0;
+bottom: 0;
+width: 100%;
+color: white;
+text-align: center;
 }
 
 .footerText {
@@ -22,4 +22,40 @@ padding: 50px;
 padding-top: 50px;
 color: white;
 font-size: 30px;
+}
+
+.navbar {
+top: 0; /* Sijoitetaan sivun yläosaan */
+width: 100%; /* Koko leveydelle */
+position: sticky;
+top: 0;
+z-index: 100;
+}
+
+.nav-link,
+.navbar-brand {
+color: rgb(5, 120, 155); /* Logon ja navbarin sisällön otsikkojen värit */
+cursor: pointer;
+}
+
+.nav-link {
+margin-right: 10em !important;
+}
+
+/* Logon ja otsikkojen väri kun kursori niiden päällä */
+.nav-link:hover {
+color: rgb(121, 194, 199);
+}
+
+.navbar-collapse {
+justify-content: flex-end;
+}
+
+/* Navbarin Oulu ja Kuopio tekstit: sisennys ja väliä tekstien välille */
+.nav-item {
+padding: 15px;
+}
+
+.container {
+padding-bottom: 150px;
 }
