--- a/Bootstrap_Website_UUSI/Oulu.css
+++ b/Bootstrap_Website_UUSI/Oulu.css
@@ -1,25 +1,69 @@
-.body {
-  background-image: url("images/oulu-background.jpg");
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  width: 2000px;
-  height: 1124px;
+.list-group {
+padding-top: 30px;
+padding-left: 30px;
+}
+
+.sisennys {
+padding-top: 30px;
+padding-left: 30px;
 }
 
 .page-footer {
-  background-color: black;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  color: white;
-  text-align: center;
+background-color: black;
+left: 0;
+bottom: 0;
+width: 100%;
+color: white;
+text-align: center;
+position: relative;
 }
 
 .footerText {
-  padding: 50px;
-  padding-top: 50px;
-  color: white;
-  font-size: 30px;
+padding: 50px;
+padding-top: 50px;
+color: white;
+font-size: 30px;
 }
-  
+
+.navbar {
+top: 0; /* Sijoitetaan sivun yläosaan */
+width: 100%; /* Koko leveydelle */
+position: sticky;
+top: 0;
+z-index: 100;
+}
+
+.nav-link,
+.navbar-brand {
+color: rgb(255, 109, 222); /* Logon ja navbarin sisällön otsikkojen värit */
+cursor: pointer;
+}
+
+.nav-link {
+margin-right: 10em !important;
+}
+
+/* Logon ja otsikkojen väri kun kursori niiden päällä */
+.nav-link:hover {
+color: rgb(255, 0, 157);
+}
+
+.navbar-collapse {
+justify-content: flex-end;
+}
+
+/* Navbarin Oulu ja Kuopio tekstit: sisennys ja väliä tekstien välille */
+.nav-item {
+padding: 15px;
+}
+
+.container {
+padding-bottom: 150px;
+}
+
+.header {
+background-image: url("images/oulu-background.jpg");
+background-size: cover;
+background-position: stretch;
+position: relative;
+}
